Added json_value structure. Modified CMake file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 2.6.0)
 project(jsonc C)
 
 include_directories(include)
-file(GLOB_RECURSE sources src/ *.c)
+file(GLOB_RECURSE sources src/*.c)
 
-add_library(jsonc SHARED ${sources})
-add_library(jsonc_static STATIC ${sources})
+add_library(${PROJECT_NAME} SHARED ${sources})
+
+install(TARGETS ${PROJECT_NAME} DESTINATION lib/)
+
+file(GLOB_RECURSE HEADERS include/*.h)
+install(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
